--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -83,15 +83,15 @@
   position: relative;
   width: 700px;
   height: 500px;
-  margin-left: 20px;
+  margin-left: 50px;
   /* background-color: red; */
 }
 .heroCard {
   position: absolute;
   display: flex;
   justify-content: center;
-  width: 350px;
-  height: 450px;
+  width: 300px;
+  height: 400px;
   box-shadow: 0 2px 5px 1px rgb(64 60 67 / 60%);
   background-color: #181b29;
   border-radius: 20px;
@@ -104,6 +104,7 @@
   animation-iteration-count: initial;
   animation-duration: 1.5s;
   animation-delay: 2s;
+  z-index: 500;
 }
 .heroCard:nth-child(2) {
   animation-name: monFrame2;
@@ -134,7 +135,7 @@
   }
 
   100% {
-    transform: translate(70%, 50%) rotate(30deg);
+    transform: translate(100%, 100px) rotate(10deg);
     opacity: 1;
   }
 }
@@ -146,7 +147,7 @@
   }
 
   100% {
-    transform: translateY(20%) rotate(-20deg);
+    transform: translateY(20%) rotate(-10deg);
     opacity: 1;
   }
 }
@@ -158,7 +159,7 @@
   }
 
   100% {
-    transform: translateX(50%) rotate(20deg);
+    transform: translateX(50%) rotate(0deg);
     opacity: 1;
   }
 }
